# jobwatch

./: .gitignore  .goreleaser.yaml  README.ja.md  README.md  SECURITY.md  Taskfile.yaml  docker-compose.yaml  install.sh  lefthook.yaml
api/: .env.example  .pre-commit-config.yaml  Taskfile.yaml  pyproject.toml
api/app/: config.py  dependencies.py  exception_handlers.py  main.py  middlewares.py
api/app/adapters/api/: deps.py
api/app/adapters/api/schemas/: host.py  job.py  (+1 more)
api/app/adapters/middlewares/: register.py  request_logging.py
api/app/core/: logging.py  settings.py
api/app/database/: client.py  host_repository.py  job_repository.py  user_repository.py  workspace_invitation_repository.py  workspace_membership_repository.py  workspace_repository.py
api/app/dependencies/: repositories.py  security.py  services.py  settings.py
api/app/domain/: exceptions.py  host.py  job.py  workspace.py
api/app/infra/dynamodb/: keys.py  mappers.py  table.py
api/app/models/: exceptions.py  host.py  job.py  timestamped.py  user.py  workspace.py  workspace_invitation.py  workspace_membership.py
api/app/ports/: host_repository.py  job_repository.py  workspace_repository.py
api/app/routers/: health.py  hosts.py  invitations.py  jobs.py  register.py  user.py  users.py  workspaces.py
api/app/schemas/: host.py  invitation.py  job.py  user.py  workspace.py
api/app/services/: health_service.py  host_service.py  job_service.py  user_service.py  workspace_invitation_service.py  workspace_service.py
api/app/usecases/: host_service.py  job_service.py  workspace_service.py
api/app/utils/: datetime.py
(+652 files in other folders)
