[project]
name = "api"
version = "0.1.0"
description = "Obsern API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.25",
    "cryptography>=46.0.6",
    "fastapi>=0.128.0",
    "mangum>=0.21.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.16",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.format]
quote-style = "double"
